k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: async-compare-api-service
spec:
  selector:
    app: async-compare-api
  ports:
  - port: 80
    targetPort: 80
