k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-async-compare-api
  labels:
      name: ingress-async-compare-api
spec:
  rules:
  - host: api.async-compare.com.br
    http:
      paths:
      -  backend:
          service:
            serviceName: async-compare-api-service
            servicePort: 80
